 =======================================================================
 ==CHANGES.txt
 =======================================================================

Gora Change Log

Trunk (unreleased changes):

* GORA-** Update Gora parent pom to include maven release plugin targets, and update developer credentials.

* GORA-74 Remove sqlbuilder library (lewismc)

* GORA-101 HBaseStore should properly support multiple tables in the mapping file. (ferdy)

* GORA-82 Add missing license headers & RAT target to pom.xml (lewismc)

* GORA-88 HBaseByteInterface not thread safe (ferdy)

* GORA-93 [gora-cassandra] Add implementation of CassandraStore.get(key) (Sujit Pal via lewismc)

* GORA-58 Upgrade Gora-Cassandra to use Cassandra 1.0.2 (lewismc)

* GORA-80 Implement functionality to define consistency used for Cassandra read and 
write operations. (lewismc)

* GORA-91 Ensure that Gora adheres to ASF branding requirements (lewismc)

* GORA-90 Create DOAP for Gora (lewismc)

* GORA-79 Block keyspace creation until the whole cassandra cluster converges to the new keyspace. (Patricio Echagüe vis lewismc)

* GORA-83 add 'target' dirs to svn ignore (ferdy)

* GORA-66 testDeleteByQueryFields seems incorrect (Keith Turner via lewismc)

* GORA-72 Made all artifacts proper OSGi bundles. Added ClassLoadingUtils which will fallback to thread context classloader if Class.forName fails. (iocanel)

* GORA-55 Removed second assertion for schema existence, since schema is already deleted, Excluded ranged queries from the tests, since the tests assume end key to be inclussive while Hbase considers it exclusive. (iocanel)

* GORA-** Updated the maven surefire plugin version to properly set the system properties (iocanel)

* GORA-22 Upgrade cassandra backend to 0.7 (jnioche & Alexis Detreglode)

* GORA-69 Added xerces to dependencyManagement to avoid version conflicts (iocanel)
